--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,14 @@
   android:fitsSystemWindows="true"
   tools:openDrawer="start">
 
+  <ImageView
+    android:id="@+id/images"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    android:scaleType="fitCenter"
+    android:adjustViewBounds="true"
+    android:contentDescription="@string/astronomy_image_description"/>
+
   <include
     android:id="@+id/app_bar_main"
     layout="@layout/app_bar_main"
