--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -5,10 +5,14 @@
   android:id="@+id/mobile_navigation"
   app:startDestination="@+id/nav_home">
 
+  <action
+    android:id="@+id/open_settings"
+    app:destination="@+id/nav_settings"/>
+
   <fragment
-    android:id="@+id/nav_home"
-    android:label="@string/menu_home"
-    android:name="edu.cnm.deepdive.astronomypictures.controller.ui.home.HomeFragment"
+    android:id="@+id/nav_astronomypictures"
+    android:label="@string/menu_astronomy_pictures"
+    android:name="edu.cnm.deepdive.astronomypictures.controller.ui.home.AstronomyFragment"
     tools:layout="@layout/fragment_home"/>
 
   <fragment
@@ -24,7 +28,7 @@
     tools:layout="@layout/fragment_slideshow"/>
 
   <fragment
-    android:id="@+id/nav_image"
+    android:id="@+id/nav_images"
     android:label="@string/menu_image"
     android:name="edu.cnm.deepdive.astronomypictures.controller.ImageFragment"
     tools:layout="@layout/fragment_image">
