--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,7 @@
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/mobile_navigation"
-  app:startDestination="@+id/nav_home">
+  app:startDestination="@+id/nav_astronomypictures">
 
   <action
     android:id="@+id/open_settings"
@@ -12,8 +12,8 @@
   <fragment
     android:id="@+id/nav_astronomypictures"
     android:label="@string/menu_astronomy_pictures"
-    android:name="edu.cnm.deepdive.astronomypictures.controller.ui.home.AstronomyFragment"
-    tools:layout="@layout/fragment_home"/>
+    android:name="edu.cnm.deepdive.astronomypictures.controller.AstronomyFragment"
+    tools:layout="@layout/fragment_astronomy"/>
 
   <fragment
     android:id="@+id/nav_gallery"
