--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <color name="colorPrimary">#6200EE</color>
-  <color name="colorPrimaryDark">#3700B3</color>
+  <color name="colorPrimary">#1A1A1A</color>
+  <color name="colorPrimaryDark">#1A1A1A</color>
   <color name="colorAccent">#03DAC5</color>
   <color name="submit">#ff00a000</color>
   <color name="cancel">#ffff0000</color>
