--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.drawerlayout.widget.DrawerLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -16,12 +17,14 @@
     android:layout_height="match_parent"/>
 
   <com.google.android.material.navigation.NavigationView
-    android:id="@+id/nav_view"
+    android:id="@+id/navigation_view"
+    style="@style/Widget.Custom.NavigationView"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_gravity="start"
     android:fitsSystemWindows="true"
     android:background="@color/drawer_background"
+    android:clipToPadding="false"
     app:menu="@menu/activity_main_drawer"/>
 
 </androidx.drawerlayout.widget.DrawerLayout>
