--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <color name="colorPrimary">#1A1A1A</color>
-  <color name="colorPrimaryDark">#1A1A1A</color>
+  <color name="colorPrimary">#FF3700B3</color>
+  <color name="colorPrimaryDark">#FF3700B3</color>
   <color name="colorAccent">#03DAC5</color>
   <color name="submit">#ff00a000</color>
   <color name="cancel">#ffff0000</color>
   <color name="drawer_background">#1A1A1A</color>
+  <color name="colorWhite">#FFFFFF</color>
 </resources>
