--- a/app/src/main/res/layout/fragment_astronomy.xml
+++ b/app/src/main/res/layout/fragment_astronomy.xml
@@ -7,36 +7,31 @@
   android:layout_height="match_parent"
   tools:context=".controller.AstronomyFragment">
 
+  <TextView
+    android:id="@+id/title"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    android:textAlignment="center"
+    android:text="@string/title"
+    android:textSize="20sp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"/>
+
   <ImageView
     android:id="@+id/image"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:scaleType="fitCenter"
     android:adjustViewBounds="true"
-    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/title"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"/>
 
-  <WebView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent"/>
 
-<!--  <TextView-->
-<!--    android:id="@+id/title"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="wrap_content"-->
-<!--    android:layout_marginTop="8dp"-->
-<!--    android:layout_marginStart="8dp"-->
-<!--    android:layout_marginEnd="8dp"-->
-<!--    android:textAlignment="center"-->
-<!--    android:text="@string/title"-->
-<!--    android:textSize="20sp"-->
-<!--    app:layout_constraintBottom_toBottomOf="parent"-->
-<!--    app:layout_constraintEnd_toEndOf="parent"-->
-<!--    app:layout_constraintStart_toStartOf="parent"-->
-<!--    app:layout_constraintTop_toTopOf="parent"/>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
